--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,32 @@ services:
       - POSTGRES_PASSWORD=teste123
       - POSTGRES_DB=cafeteria
       - PGDATA=/var/lib/postgresql/data/cafeteria
+    networks:
+      - cafeteria
+
+  backend:
+    container_name: backend
+    image: cafeteria/backend
+    build:
+      context: backend
+      dockerfile: Dockerfile
+    environment:
+      - PYTHONPATH=/usr/src/app
+    entrypoint:  [
+      "python",
+      "-Xfrozen_modules=off",
+      "-m", "debugpy",
+      "--listen", "0.0.0.0:5678",
+      "-m", "app",
+      "--wait-for-client",
+      "--multiprocess",
+      "-m", "flask",
+      "run",
+      "-h", "0.0.0.0",
+      "-p", "5000"
+    ]
+    networks:
+      - cafeteria
 
 volumes:
   database-storage:
