commented out frontend configs

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -25,22 +25,22 @@ http {
         proxy_read_timeout 600s;
         proxy_send_timeout 600s;
         proxy_connect_timeout 600s;
-        
-        location / {
-            proxy_pass http://frontend:3000;
-        }
 
-        location /api {
-            proxy_pass http://backend:5000/;
-            proxy_cookie_domain localhost localhost;
-            proxy_cookie_domain 10.0.0.233 localhost;
-						add_header 'Access-Control-Allow-Origin' $allow_origin always;
-						add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-            # required to be able to read Authorization header in frontend
-            add_header 'Access-Control-Expose-Headers' 'Authorization' always;
-        }
+				# location /api {
+        #     proxy_pass http://backend:5000/;
+        #     proxy_cookie_domain localhost localhost;
+        #     proxy_cookie_domain 10.0.0.233 localhost;
+				# 		add_header 'Access-Control-Allow-Origin' $allow_origin always;
+				# 		add_header 'Access-Control-Allow-Credentials' 'true' always;
+        #     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        #     add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        #     # required to be able to read Authorization header in frontend
+        #     add_header 'Access-Control-Expose-Headers' 'Authorization' always;
+        # }
+        
+        # location / {
+        #     proxy_pass http://frontend:3000;
+        # }
 
         location /sockjs-node {
             proxy_pass http://frontend:3000/sockjs-node;
