commented out further frontend configs

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -42,14 +42,14 @@ http {
         #     proxy_pass http://frontend:3000;
         # }
 
-        location /sockjs-node {
-            proxy_pass http://frontend:3000/sockjs-node;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_set_header Host $host;
-            proxy_read_timeout 600s;
-            proxy_send_timeout 600s;
-        }
+        # location /sockjs-node {
+        #     proxy_pass http://frontend:3000/sockjs-node;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection $connection_upgrade;
+        #     proxy_set_header Host $host;
+        #     proxy_read_timeout 600s;
+        #     proxy_send_timeout 600s;
+        # }
     }
 }
