--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
       - cafeteria
     depends_on:
       - backend
+    ports:
+      - 80:80
+      - 443:443
 
 volumes:
   database-storage:
