--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,21 @@ services:
     depends_on:
       - database
 
+  frontend:
+    container_name: frontend
+    build:
+      context: frontend/image
+      dockerfile: Dockerfile
+      target: dev
+    image: cafeteria/frontend
+    volumes:
+      - .:/app/
+    depends_on:
+      - backend
+    networks:
+      - cafeteria
+    stdin_open: true
+
   proxy:
     container_name: proxy
     image: cafeteria/proxy
@@ -57,6 +72,7 @@ services:
       - cafeteria
     depends_on:
       - backend
+      - frontend
     ports:
       - 80:80
       - 443:443
