--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -26,7 +26,7 @@ http {
         proxy_send_timeout 600s;
         proxy_connect_timeout 600s;
 
-				location /api {
+		location /api {
             proxy_pass http://backend:5000/;
             proxy_cookie_domain localhost localhost;
             proxy_cookie_domain 10.0.0.233 localhost;
@@ -38,18 +38,9 @@ http {
             add_header 'Access-Control-Expose-Headers' 'Authorization' always;
         }
         
-        # location / {
-        #     proxy_pass http://frontend:3000;
-        # }
+        location / {
+            proxy_pass http://frontend:5173;
+        }
 
-        # location /sockjs-node {
-        #     proxy_pass http://frontend:3000/sockjs-node;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection $connection_upgrade;
-        #     proxy_set_header Host $host;
-        #     proxy_read_timeout 600s;
-        #     proxy_send_timeout 600s;
-        # }
     }
 }
