--- a/frontend/image/package.json
+++ b/frontend/image/package.json
@@ -14,6 +14,11 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
     "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
