--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -39,7 +39,7 @@ http {
         }
         
         location / {
-            proxy_pass http://frontend:5173;
+            proxy_pass http://frontend:5173/;
         }
 
     }
