--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -42,5 +42,10 @@ http {
             proxy_pass http://frontend:5173/;
         }
 
+        location /images {
+            root /opt/cafeteria/images;
+            try_files $uri $uri.jpeg $uri.jpg $uri.gif $uri.png =404;
+        }
+
     }
 }
